<resources>
    <string name="app_name">TransDoc</string>
    <string name="login">Login</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="authenticate">Authenticate</string>
    <string name="add_new_driver">Add new driver</string>
    <string name="edit">Edit</string>
    <string name="full_name">Full Name</string>
    <string name="telephone_number">Telephone number</string>
    <string name="add">Add</string>
    <string name="add_new_car">Add new car</string>
    <string name="number">Number</string>
    <string name="type">Type</string>
    <string name="itp">ITP</string>
    <string name="assurance_expires_on">Assurance expires</string>
    <string name="itp_expires_on">ITP expires</string>
    <string name="name">Name</string>
    <string name="contact_person">Contact person</string>
    <string name="nr_orc">Nr/ORC</string>
    <string name="cui">CUI</string>
    <string name="add_new_company">Add new company</string>
    <string name="add_new_oder">Add new Oder</string>
    <string name="title_activity_orders">OrdersActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="choose_a_car">Choose a car</string>
    <string name="select_car">Select Car</string>
    <string name="choose_a_driver">Choose a driver</string>
    <string name="receive_the_order">Receive the order</string>
    <string name="code_of_the_order">Code of the order:</string>
    <string name="receive_date">Receive date:</string>
    <string name="oder_code">Oder code</string>
    <string name="company">Company:</string>
    <string name="company_simple">Company</string>
    <string name="amount_of_money_dots">Amount of money:</string>
    <string name="money">Money</string>
    <string name="deadline_for_payment_days">Deadline for payment (days)</string>
    <string name="number_of_days_until_payment">Number of days until payment</string>
    <string name="type_dots">Type:</string>
    <string name="weight_dots">Weight:</string>
    <string name="weight">Weight</string>
    <string name="unit_of_measurament_dots">Unit of measurament:</string>
    <string name="unit">Unit</string>
    <string name="give_details_about_the_order">Give details about the order</string>
    <string name="describe_the_transported_goods">Describe the transported goods</string>
    <string name="name_dots">Name:</string>
    <string name="date">Date</string>
    <string name="date_dots">Date:</string>
    <string name="time_slot_dots">Time slot:</string>
    <string name="time_slot">Time Slot</string>
    <string name="address_dots">Address:</string>
    <string name="address">Address</string>
    <string name="select_company">Select company</string>
    <string name="choose_the_delivary_company">Choose the delivery company:</string>
    <string name="choose_transport_details">Choose transport details:</string>
    <string name="select_driver">Select driver</string>
    <string name="describe_loading_proccess">Describe the loading process</string>
    <string name="describe_unloading_proccess">Describe the unloading process</string>
    <string name="finish">Finish</string>
    <string name="generate_order">Generate Order</string>
    <string name="orders">Orders</string>
    <string name="drivers">Drivers</string>
    <string name="cars">Cars</string>
    <string name="companies">Companies</string>
    <string name="log_out">Log Out</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="code">Code</string>
    <string name="client">Client</string>
    <string name="cashed">Cashed</string>
    <string name="sign_out">Sign Out</string>
    <string name="select_your_transport_elements">Select your transport elements</string>
    <string name="generate_pdf">Generate PDF</string>
    <string name="search">Search…</string>
    <string name="active_orders">Active Orders</string>
    <string name="completed_orders">Completed Orders</string>
    <string name="account">Account</string>
    <string name="configure_elements">Configure elements</string>

</resources>