<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/driver_image"
                android:layout_width="64dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:src="@drawable/ic_baseline_event_note_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingBottom="10dp"
                android:text="@string/give_details_about_the_order"
                android:textStyle="bold" />

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="20dp"
                android:paddingEnd="20dp">

                <TextView
                    android:id="@+id/code_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:paddingTop="20dp"
                    android:text="@string/code_of_the_order"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry" />

                <EditText
                    android:id="@+id/code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/editbox_background"
                    android:hint="@string/oder_code"
                    android:importantForAutofill="no"
                    android:inputType="textCapWords"
                    android:padding="10dp"
                    android:paddingStart="20dp"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/receive_date_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:paddingTop="20dp"
                    android:text="@string/receive_date"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/receive_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/editbox_background"
                    android:clickable="true"
                    android:editable="false"
                    android:focusable="true"
                    android:hint="@string/date"
                    android:importantForAutofill="no"
                    android:inputType="date"
                    android:padding="10dp"
                    android:paddingStart="20dp"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/company_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:paddingTop="20dp"
                    android:text="@string/company"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry" />

                <EditText
                    android:id="@+id/company"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/editbox_background"
                    android:hint="@string/company_simple"
                    android:importantForAutofill="no"
                    android:inputType="textCapWords"
                    android:padding="10dp"
                    android:paddingStart="20dp"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/amount_of_money_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:paddingTop="20dp"
                    android:text="@string/amount_of_money_dots"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry" />

                <EditText
                    android:id="@+id/amount_of_money"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/editbox_background"
                    android:hint="@string/money"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:padding="10dp"
                    android:paddingStart="20dp"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/deadline_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:paddingTop="20dp"
                    android:text="@string/deadline_for_payment_days"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry" />

                <EditText
                    android:id="@+id/deadline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/editbox_background"
                    android:hint="@string/number_of_days_until_payment"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:padding="10dp"
                    android:paddingStart="20dp"
                    tools:ignore="RtlSymmetry" />

                <Button
                    android:id="@+id/next_button"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:text="@string/fui_next_default"
                    android:textSize="12sp" />

            </LinearLayout>

        </ScrollView>
    </LinearLayout>

</layout>