<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_gravity="center"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/driver_image"
                android:layout_width="64dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:src="@drawable/ic_baseline_card_giftcard_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingBottom="10dp"
                android:text="@string/describe_the_transported_goods"
                android:textStyle="bold" />

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="20dp"
                android:paddingEnd="20dp">

                <TextView
                    android:id="@+id/type_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:paddingTop="20dp"
                    android:text="@string/type_dots"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry" />

                <EditText
                    android:id="@+id/type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/type"
                    android:importantForAutofill="no"
                    android:inputType="textCapSentences"
                    android:padding="10dp"
                    android:background="@android:drawable/editbox_background"
                    android:paddingStart="20dp"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/weight_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:paddingTop="20dp"
                    android:text="@string/weight"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/weight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/weight"
                    android:importantForAutofill="no"
                    android:inputType="numberSigned"
                    android:padding="10dp"
                    android:background="@android:drawable/editbox_background"
                    android:paddingStart="20dp"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/unit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:paddingTop="20dp"
                    android:text="@string/unit_of_measurament_dots"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry" />

                <EditText
                    android:id="@+id/unit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/unit"
                    android:importantForAutofill="no"
                    android:inputType="textCapCharacters"
                    android:paddingStart="20dp"
                    android:padding="10dp"
                    android:background="@android:drawable/editbox_background"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/amount_of_money_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:paddingTop="20dp"
                    android:text="@string/amount_of_money_dots"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry" />

                <EditText
                    android:id="@+id/amount_of_money"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/money"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:paddingStart="20dp"
                    android:padding="10dp"
                    android:background="@android:drawable/editbox_background"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/deadline_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:paddingTop="20dp"
                    android:text="@string/deadline_for_payment_days"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry" />

                <EditText
                    android:id="@+id/deadline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/number_of_days_until_payment"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:padding="10dp"
                    android:background="@android:drawable/editbox_background"
                    android:paddingStart="20dp"
                    tools:ignore="RtlSymmetry" />

                <Button
                    android:id="@+id/next_button"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:text="@string/fui_next_default"
                    android:textSize="12sp" />

            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</layout>