<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".elements.cars.newcar.NewCarFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="50dp">

        <ImageView
            android:id="@+id/close_dialog_fragment"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/ic_action_close"
            android:layout_gravity="end" />

        <TextView
            android:id="@+id/number_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/number" />

        <EditText
            android:id="@id/number"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:ems="5"
            android:inputType="textCapCharacters"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/type_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/type" />

        <EditText
            android:id="@id/type"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:ems="5"
            android:inputType="textCapWords"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/itp_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/itp_expires_on" />

        <EditText
            android:id="@id/itp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:ems="5"
            android:inputType="textCapWords"
            android:clickable="true"
            android:editable="false"
            android:focusable="true"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/assurance_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/assurance_expires_on" />

        <EditText
            android:id="@+id/assurance"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:ems="5"
            android:textSize="15sp"
            android:clickable="true"
            android:editable="false"
            android:focusable="true" />

        <Button
            android:id="@+id/add_button"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/add_new_car"
            android:textSize="12sp" />

    </LinearLayout>
</layout>