<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="elements.drivers.NewDriverDialogFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="50dp">

        <ImageView
            android:id="@+id/close_dialog_fragment"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/ic_action_close"
            android:layout_gravity="end" />


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/driver_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:src = "@drawable/ic_baseline_face_24"/>

        <TextView
            android:id="@+id/driver_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/full_name" />

        <EditText
            android:id="@+id/driver_name"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:ems="5"
            android:inputType="textCapWords"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/driver_phone_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/telephone_number" />

        <EditText
            android:id="@+id/driver_phone"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:ems="5"
            android:inputType="phone"
            android:orientation="vertical"
            android:textSize="15sp" />

        <Button
            android:id="@+id/add_button"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/add_new_driver"
            android:textSize="12sp" />

    </LinearLayout>
</layout>